Fixed corporate member logo stretching.

--- a/djangoproject/scss/_style.scss
+++ b/djangoproject/scss/_style.scss
@@ -3126,7 +3126,7 @@ ul.corporate-members li {
 .corporate-member-logo {
     float: right;
     max-height: 150px;
-    width: 150px;
+    max-width: 150px;
     padding: 0 0 10px 10px;
 }
 
